objects/Product_list__c.object
<CustomObject>
    <label>Product list</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Product list No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product lists</relationshipLabel>
        <relationshipName>Product_lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product lists</relationshipLabel>
        <relationshipName>Product_lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product lists</relationshipLabel>
        <relationshipName>Product_lists</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>